[package]
name = "scissors"
version = "0.1.0"
authors = ["Zachary Vacura <zach@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = { version = "0.9.0", features = ["raqote-backend"] }
roxmltree = "0.11.0"
winit = "0.22.1"

[build-dependencies]
bindgen = "0.53.2"
