[package]
name = "scissors"
version = "0.1.0"
authors = ["Zachary Vacura <zach@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11"
winit = "0.22"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.1"
dirs = "2.0"

[build-dependencies]
bindgen = "0.53.2"
